<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="200dp">

    <TextView
        android:id="@+id/product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_prod"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/prodName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_prod_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/product"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <EditText
        android:id="@+id/prodPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_prod_price"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/prodName"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <Button
        android:id="@+id/addProd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_prod"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/prodPrice"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>